<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyActivity"
    android:background="@color/white"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/createLobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/radio_button_custom"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingLeft="16dp"
            android:text="@string/create_lobby"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="366dp" />

        <RadioButton
            android:id="@+id/joinLobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:background="@drawable/radio_button_custom"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingLeft="16dp"
            android:text="@string/join_lobby"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/createLobby"
            tools:layout_editor_absoluteX="39dp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/logoutBtn"
        android:layout_width="34dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@drawable/logout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        style="@android:style/Widget.Button"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/next_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>